POM update - build executable JAR